# ChatMininet-sample

./: Platform.py  README.md
AItools/: ImgToJson.py
MCPserver/Server/: Network_server.py  Time_server.py
MCPserver/adk_agent/: agent.py  pyproject.toml
Network/: AIRestAPI.py  OriginalRestAPI.py
Network/Visualization/: M2Editor.py
Platform-Data/: platform-params.json  topo.json  topo.mn
